--- a/EnvConsole/Window/ConsoleWindow.xaml
+++ b/EnvConsole/Window/ConsoleWindow.xaml
@@ -1,7 +1,7 @@
-﻿<Window x:Class="StationConsole.ConsoleWindow"
+﻿<Window x:Class="EnvConsole.Windows.ConsoleWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:StationConsole"
+        xmlns:local="clr-namespace:EnvConsole"
         Title="ConsoleWindow" Height="576" Width="1024" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
