--- a/EnvConsole/Window/MainWindow.xaml
+++ b/EnvConsole/Window/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="StationConsole.MainWindow"
+﻿<Window x:Class="EnvConsole.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="0" Width="0" Loaded="Window_Loaded">
