--- a/SockMaster/MainWindow.xaml
+++ b/SockMaster/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SockMaster.SockMasterWindow"
+﻿<Window x:Class="SockMaster.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="SockMaster" Height="540" Width="960" WindowStartupLocation="CenterScreen">
