--- a/EnvConsole/Windows/ConsoleWindow.xaml
+++ b/EnvConsole/Windows/ConsoleWindow.xaml
@@ -1,8 +1,7 @@
 ﻿<Window x:Class="EnvConsole.Windows.ConsoleWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:EnvConsole"
-        Title="ConsoleWindow" Height="576" Width="1024" WindowStartupLocation="CenterScreen" Closed="Window_Closed">
+        Title="ConsoleWindow" Height="576" Width="1024" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <CollectionViewSource x:Key='clients' Source="{Binding Path=ClientTable}">
             <CollectionViewSource.GroupDescriptions>
@@ -130,8 +129,14 @@
         </ListView>
         
         <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="2" ></GridSplitter>
-        
-        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0" Grid.RowSpan="2"></TextBox>
+
+        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0" Grid.RowSpan="2" TextChanged="txtMsg_TextChanged">
+            <TextBox.ContextMenu>
+                <ContextMenu StaysOpen="true">
+                    <MenuItem Header="clear" Click="MenuItem_MsgClear_Click"/>
+                </ContextMenu>
+            </TextBox.ContextMenu>
+        </TextBox>
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
