--- a/SockMaster/MainWindow.xaml
+++ b/SockMaster/MainWindow.xaml
@@ -88,7 +88,7 @@
 
         <StatusBar Name="statusBar" Grid.Row="3" Grid.ColumnSpan="2" VerticalAlignment="Bottom">
             <StatusBarItem>
-                <TextBlock>Ready</TextBlock>
+                <TextBlock x:Name="txtPromote">Ready</TextBlock>
             </StatusBarItem>
             <StatusBarItem>
                 <TextBlock x:Name="txtTimeRun"></TextBlock>
