--- a/EnvClient/Windows/InputDialog.xaml
+++ b/EnvClient/Windows/InputDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EnvConsole.Windows.InputDialog"
+﻿<Window x:Class="EnvClient.Windows.InputDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="InputDialog" Height="227" Width="372" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" KeyDown="Window_KeyDown">
