--- a/EnvClient/Windows/MainWindow.xaml
+++ b/EnvClient/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EnvConsole.Windows.MainWindow"
+﻿<Window x:Class="EnvClient.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ConsoleWindow" Height="576" Width="1024" WindowStartupLocation="CenterScreen">
@@ -34,8 +34,6 @@
                                     DisplayMemberBinding="{Binding Name}" />
                     <GridViewColumn Header="端口" Width="60"
                                     DisplayMemberBinding="{Binding Port}" />
-                    <GridViewColumn Header="监听状态" Width="75"
-                                    DisplayMemberBinding="{Binding ListenState}" />
                     <GridViewColumn Header="定时器状态" Width="75"
                                     DisplayMemberBinding="{Binding TimerState}" />
                     <GridViewColumn Header="间隔(秒)" Width="75"
@@ -48,7 +46,6 @@
                 <ContextMenu StaysOpen="true">
                     <MenuItem Header="启动监听" Click="MenuItem_StartListener_Click"/>
                     <MenuItem Header="关闭监听" Click="MenuItem_StopListener_Click"/>
-                    <MenuItem Header="设置监听端口" Click="MenuItem_SetListener_Click"/>
                     <Separator></Separator>
                     <MenuItem Header="启动定时器" Click="MenuItem_StartTimer_Click"/>
                     <MenuItem Header="停止定时器" Click="MenuItem_StopTimer_Click"/>
