--- a/EnvConsole/Windows/MainWindow.xaml
+++ b/EnvConsole/Windows/MainWindow.xaml
@@ -11,18 +11,18 @@
     </Window.Resources>
     <Grid Background="LightBlue">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="720*" />
-            <ColumnDefinition Width="240*" />
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="8" />
-            <RowDefinition Height="140" />
-            <RowDefinition Height="180" />
+            <RowDefinition Height="160*" />
+            <RowDefinition Height="160*" />
             <RowDefinition Height="160*" />
             <RowDefinition Height="26" />
         </Grid.RowDefinitions>
 
-        <ListView x:Name="lstViewServer" Margin="5,5,5,5" Grid.Row="1" ItemsSource="{Binding ServerTable}">
+        <ListView x:Name="lstViewServer" Margin="5,5,5,5" Grid.Row="1" Grid.Column="0" ItemsSource="{Binding ServerTable}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="Center" />
@@ -36,12 +36,6 @@
                                     DisplayMemberBinding="{Binding Port}" />
                     <GridViewColumn Header="监听状态" Width="75"
                                     DisplayMemberBinding="{Binding ListenState}" />
-                    <GridViewColumn Header="定时器状态" Width="75"
-                                    DisplayMemberBinding="{Binding TimerState}" />
-                    <GridViewColumn Header="间隔(秒)" Width="75"
-                                    DisplayMemberBinding="{Binding TimerInterval}" />
-                    <GridViewColumn Header="命令" Width="160"
-                                    DisplayMemberBinding="{Binding TimerCommand}" />
                 </GridView>
             </ListView.View>
             <ListView.ContextMenu>
@@ -49,15 +43,11 @@
                     <MenuItem Header="启动监听" Click="MenuItem_StartListener_Click"/>
                     <MenuItem Header="关闭监听" Click="MenuItem_StopListener_Click"/>
                     <MenuItem Header="设置监听端口" Click="MenuItem_SetListener_Click"/>
-                    <Separator></Separator>
-                    <MenuItem Header="启动定时器" Click="MenuItem_StartTimer_Click"/>
-                    <MenuItem Header="停止定时器" Click="MenuItem_StopTimer_Click"/>
-                    <MenuItem Header="设置定时器" Click="MenuItem_SetTimer_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
 
-        <ListView x:Name="lstViewModule" Margin="5,5,5,5" Grid.Column="1" Grid.Row="1" Grid.RowSpan="3"  ItemsSource="{Binding ModuleTable}">
+        <ListView x:Name="lstViewModule" Margin="5,5,5,5" Grid.Column="0" Grid.Row="2" Grid.RowSpan="2"  ItemsSource="{Binding ModuleTable}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="模块名" Width="110"
@@ -78,9 +68,7 @@
             </ListView.ContextMenu>
         </ListView>
 
-        <GridSplitter Height="2" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
-
-        <ListView x:Name="lstViewClient" Margin="5" Grid.Row="2" ItemsSource="{Binding Source={StaticResource clients}}">
+        <ListView x:Name="lstViewClient" Margin="5" Grid.Row="1" Grid.RowSpan="2" Grid.Column="1" ItemsSource="{Binding Source={StaticResource clients}}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="{x:Type ListViewItem}">
                     <Setter Property="HorizontalContentAlignment" Value="left" />
@@ -133,10 +121,7 @@
             </ListView.ContextMenu>
         </ListView>
 
-        <GridSplitter Height="2" Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
-        <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="3" ></GridSplitter>
-
-        <TextBox Name="txtMsg" Grid.Column="0" Grid.Row="3" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0" Grid.RowSpan="1">
+        <TextBox Name="txtMsg" Grid.Column="1" Grid.Row="3" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" IsReadOnly="True" UndoLimit="0" Grid.RowSpan="1">
             <TextBox.ContextMenu>
                 <ContextMenu StaysOpen="true">
                     <MenuItem Header="clear" Click="MenuItem_MsgClear_Click"/>
@@ -176,5 +161,9 @@
                 <TextBlock x:Name="historyPackParsedCount">0</TextBlock>
             </StatusBarItem>
         </StatusBar>
+
+        <GridSplitter Height="2" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
+        <GridSplitter Height="2" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Bottom"></GridSplitter>
+        <GridSplitter Width="2" Grid.Row="1" Grid.RowSpan="3" ></GridSplitter>
     </Grid>
 </Window>
