--- a/EnvClient/Windows/MainWindow.xaml
+++ b/EnvClient/Windows/MainWindow.xaml
@@ -5,7 +5,7 @@
     <Window.Resources>
         <CollectionViewSource x:Key='clients' Source="{Binding Path=ClientTable}">
             <CollectionViewSource.GroupDescriptions>
-                <PropertyGroupDescription PropertyName="ServerPort" />
+                <PropertyGroupDescription PropertyName="LocalEP.Port" />
             </CollectionViewSource.GroupDescriptions>
         </CollectionViewSource>
     </Window.Resources>
@@ -107,7 +107,7 @@
                     <GridViewColumn Header="创建时间" Width="140"
                                     DisplayMemberBinding="{Binding Path=ConnectTime}" />
                     <GridViewColumn Header="CCID" Width="150"
-                                    DisplayMemberBinding="{Binding Path=ID}" />
+                                    DisplayMemberBinding="{Binding Path=CCID}" />
                     <GridViewColumn Header="名称" Width="150"
                                     DisplayMemberBinding="{Binding Path=Name}" />
                 </GridView>
